--- a/GUI/HesapMak.ui
+++ b/GUI/HesapMak.ui
@@ -25,7 +25,11 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLineEdit" name="txtSonuc"/>
+      <widget class="QLineEdit" name="txtSonuc">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
